GNOME Bugzilla – Bug 770920
rhythmbox crashed with SIGSEGV during import
Last modified: 2016-09-06 12:31:02 UTC
Created attachment 334864 [details] [review] Return when we have no more tracks to process. Steps to reproduce: 1. Click Import. 2. Select a dir which has few tracks ( 2 is enough ) 3. Click mouse on first track. Do not click import. 4. Press tab until the keyboard focus is on 'Import 1 selected track' 5. Keep pressing 'space bar' continuously. 6. Rhythmbox crashes when the last track is processed. The issue is due to the fact that, we fire "clicked" events on import button, even after all tracks have been processed.
Backtrace for reference. Core was generated by `/home/dev/source/git/rhythmbox/shell/.libs/lt-rhythmbox -d'. Program terminated with signal SIGSEGV, Segmentation fault.
+ Trace 236635
$1 = (GList *) 0x0 (gdb)
Review of attachment 334864 [details] [review]: I changed the g_list_length call to just check if 'entries' is NULL. There's no need to count the entire list just to determine whether it's empty or not. With that change, pushed as commit 027dcae.