import-dialog: don't crash if there are no entries to import

The import button should be insensitive in this case, but there
appears to be a small window for this to happen.

https://bugzilla.gnome.org/show_bug.cgi?id=770920